turn on slick carousel

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Vadym Prokopchuk",
+  "author": "Bekzod Developer",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.26.13",
@@ -16,7 +16,6 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.1.0",
-    "gulp-uglify-es": "^2.0.0",
-    "jquery": "^3.5.1"
+    "gulp-uglify-es": "^2.0.0"
   }
 }
