--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.1.0",
-    "gulp-uglify-es": "^2.0.0"
+    "gulp-uglify-es": "^2.0.0",
+    "jquery": "^3.6.0",
+    "slick-carousel": "^1.8.1"
   }
 }
